TestCases/PodSecurityPolicy/blockAllowPrivilegeEscalation/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: allow-privilege-escalation
tests:
  - name: allow-privilege-escalation
    template: ../../../PodSecurityPolicy/blockAllowPrivilegeEscalation/constraintTemplate.yaml
    constraint: ../../../PodSecurityPolicy/blockAllowPrivilegeEscalation/constraint.yaml
    cases:
      - name: example-allowed
        object: example/example_allowed.yaml
        assertions:
          - violations: no
      - name: example-disallowed
        object: example/example_disallowed.yaml
        assertions:
          - violations: yes
      - name: disallowed-ephemeral
        object: example/disallowed_ephemeral.yaml
        assertions:
          - violations: yes
      - name: update
        object: example/update.yaml
        assertions:
          - violations: no
